fix right/wrong indicators overlaping for rtl sites

--- a/css/common-rtl.css
+++ b/css/common-rtl.css
@@ -211,14 +211,6 @@ footer.qsm-popup__footer button.qsm-popup-secondary-button:hover {
 	padding-right: 10px;
 }
 
-.mlw_qmn_question span.qsm-text-wrong-option::before {
-	content: "\f335";
-	font-family: dashicons;
-	position: relative;
-	top: 3px;
-	right: 8px;
-}
-
 .mlw_qmn_question .qsm-text-correct-option {
 	display: flex;
 	color: green;
@@ -226,12 +218,15 @@ footer.qsm-popup__footer button.qsm-popup-secondary-button:hover {
 	padding-right: 10px;
 }
 
-.mlw_qmn_question .qsm-text-correct-option:before {
+.mlw_qmn_question .qsm-text-correct-option:before,
+.mlw_qmn_question .qsm-text-simple-option:before,
+.mlw_qmn_question span.qsm-text-wrong-option::before {
+	display: inline-block;
 	content: "\f159";
 	font-family: dashicons;
 	position: relative;
 	top: 3px;
-	right: 8px;
+	right: -8px;
 }
 
 .mlw_qmn_question .qsm-text-correct-option.qsm-text-user-correct-answer:before {
@@ -271,14 +266,6 @@ div .qsm-results-page .qmn_image_option {
 	margin-bottom: 5px;
 	color: #808080;
 	padding-right: 10px;
-}
-
-.mlw_qmn_question .qsm-text-simple-option:before {
-	content: "\f159";
-	font-family: dashicons;
-	position: relative;
-	top: 3px;
-	right: 8px;
 }
 
 .qsm-results-page .qmn_question_answer.qsm-add-border-bottom {
